<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tráfego</string>
    <string name="app_name_escalas">Escalas</string>
    <string name="app_name_frotas">Frotas</string>
    <string name="app_name_falhas">Guia de Falhas</string>
    <string name="app_name_fones">Telefones</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Início</string>
    <string name="about">Sobre o app</string>
    <string name="links">Links</string>
    <string-array name="page_title_falhas">
        <item>FROTA E</item>
        <item>FROTA G</item>
        <item>FROTA H</item>
        <item>FROTA I</item>
        <item>FROTA J</item>
        <item>FROTA K</item>
        <item>FROTA L</item>
    </string-array>
    <string-array name="page_title_fones">
        <item>Linha 1</item>
        <item>Linha 2</item>
        <item>Linha 3</item>
        <item>Linha 15</item>
        <item>Apoio</item>
    </string-array>
    <string-array name="page_title_frotas">
        <item>Linha</item>
        <item>Frota</item>
    </string-array>
    <string name="falha_porta_frota_e">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n\nIsolar as portas do carro;\n(Em estações com PSD, isolar pelo painel local de portas)\n\nDerivar portas.\n\nNota: Posicionar um empregado habilitado junto a porta isolada.</string>
    <string name="falha_porta_frota_g">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n(Em estações com PSD, seguir com portas derivadas até a estação seguinte)</string>
    <string name="falha_porta_frota_h">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n\nIsolar as portas do carro;\n\nDerivar portas.\n\nNOTA: Posicionar um empregado habilitado junto à porta isolada.\n\nNOTA: Em estações com PSD, na impossibilidade de isolar a porta( ou o carro), solicitar ao CCO a evacuação do trem e derivar portas, seguindo a rotina de movimentação do trem com portas derivadas.</string>
    <string name="falha_porta_frota_i">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n\nIsolar as portas do carro;\n\nDerivar portas.\n\nNOTA: Posicionar um empregado habilitado junto à porta isolada.</string>
    <string name="falha_porta_frota_j">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n\nIsolar as portas do carro;\n\nDerivar portas.\n\nNOTA: Ao derivar portas, ISOLAR DEF TOTAL e seguir em ATO/MCS.\n\nNOTA: Posicionar um empregado habilitado junto à porta isolada.\n\nNOTA: Em estações com PSD, na impossibilidade de isolar a porta( ou o carro), solicitar ao CCO a evacuação do trem e derivar portas, seguindo a rotina de movimentação do trem com portas drivadas.</string>
    <string name="falha_porta_frota_k">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n\nIsolar as portas do carro;\n\nDerivar portas.\n\nNOTA: Posicionar um empregado habilitado junto à porta isolada.</string>
    <string name="falha_porta_frota_l">Verificar se há objeto obstruindo o fechamento da porta, ou se há dispositivo de emergência de portas acionado;\n\nIsolar eletricamente a porta;\n\nIsolar as portas do carro;\n\nDerivar portas.\n\nNOTA: Posicionar um empregado habilitado junto à porta isolada.</string>
    <string name="falha_tracao_frota_e" tools:ignore="Typos">Operação ATC:\n\nATO;\nATO-RED;\nMCS;\nMCS-RED;\nRearme na alavanca reversora e repetir os testes anteriores;\nMANUAL;\nMANUAL com derivação de portas;\nRearme na CEG;\nComando oposto: MANUAL RÉ com DERIVAÇÃO DE PORTAS;\nReboque\n\nOperação CBTC, testar:\n\nCBTC-AM;\nCBTC-MCS;\nCBTC-RM;\nCBTC-RM com DERIVAÇÃO DE PORTAS;\nMANUAL com DERIVAÇÃO DE PORTAS( CBTC-OFF);\nComando oposto: MANUAL-RÉ com DERIVAÇÃO DE PORTAS;\nReboque.</string>
    <string name="falha_tracao_frota_g">Operação ATC:\n\nATO;\nATO-RED;\nReset na chave REVERSORA e repetir os testes anteriores;\nMANUAL;\nMANUAL com todas as derivações mantidas simultaneamente: DERIVAÇÃO DE PORTAS, DERIVAÇÃO DE FREIO DE EMERGÊNCIA e DERIVAÇÃO V6;\nRearme CEG;\nComando Oposto - MANUAL-RÉ com todas as DERIVAÇÕES;\nPreparar para Reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la.\n\nOperação CBTC:\n\nCBTC-AM;\nCBTC-MCS;\nCBTC-RM;\nCBTC-RM com todas as derivações mantidas simultaneamente: DERIVAÇÃO DE PORTAS, DERIVAÇÃO DE FREIO DE EMERGÊNCIA e DERIVAÇÃO V6;\nMANUAL com CBTC-OFF;\nComando Oposto: MANUAL-RÉ com todas as DERIVAÇÕES;\nPreparar para reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la.</string>
    <string name="falha_tracao_frota_h">ATO;\nATO-RED;\nReset na chave REVERSORA e repetir os testes anteriores;\nMANUAL;\nMANUAL com todas as derivações mantidas simultaneamente: DERIVAÇÃO DE PORTAS, DERIVAÇÃO DE FREIO DE EMERGÊNCIA e DERIVAÇÃO V6;\nMODO SOCORRO( Manual), mantendo todas as DERIVAÇÕES;\nRearme CEG;\nComando Oposto: MANUAL-RÉ com todas as DERIVAÇÕES;\nPreparar para reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la.</string>
    <string name="falha_tracao_frota_i">Operação ATC:\n\nATO;\nATO-RED;\nRearme na chave REVERSORA e repetir os testes anteriores;\nMANUAL;\nMANUAL derivando Portas e freio de emergência;\nRearme na CEG;\nComando Oposto: MANUAL-RÉ com todas as DERIVAÇÕES;\nReboque.\n\nOperação CBTC:\n\nCBTC-AM;\nCBTC-MCS;\nCBTC-RM;\nCBTC-RM derivando portas e freio de emergência;\nMANUAL com todas as DERIVAÇÕES e chave do CBTC em OFF;\nComando Oposto: MANUAL-RÉ com todas as DERIVAÇÕES, e chave do CBTC em OFF nas duas cabines;\nReboque.</string>
    <string name="falha_tracao_frota_j">Operação ATC:\n\nATO;\nATO-RED (ou MCS-RED);\nReset na chave REVERSORA e repetir os testes anteriores;\nMANUAL;\nMANUAL com todas as derivações mantidas simultaneamente: DERIVAÇÃO DE PORTAS e DERIVAÇÃO DE FREIO DE EMERGÊNCIA( AUTO-REBOQUE);\nRearme na CEG;\nComando Oposto: MANUAL-RÉ com todas as DERIVAÇÕES;\nPreparar para reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la( Consultar tela de BYPASS, indicando freio mecânico isolado).\n\nOperação CBTC:\n\nCBTC-AM;\nCBTC-MCS;\nCBTC-RM;\nCBTC-RM Derivar portas e derivar freio de emergência( chave auto-reb);\nMANUAL com todas as DERIVAÇÕES e com a chave do CBTC em OFF;\nComendo Oposto: MANUAL-RÉ com todas as DERIVAÇÕES e com a chave do CBTC em OFF nas duas cabines;\nPreparar para reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la( consultar a tela de BYPASS, indicação de freio mecânico isolado).\n\nNOTA: Ao derivar portas, ISOLAR DSF TOTAL e seguir em ATO ou MCS.</string>
    <string name="falha_tracao_frota_k">ATO;\nATO-RED;\nReset na chave REVERSORA e repetir os testes anteriores;\nMANUAL;\nMANUAL com DERIVAÇÃO DE PORTAS;\nRearme CEG;\nComando Oposto: MANUAL-RÉ com DERIVAÇÃO DE PORTAS;\nPreparar para reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la.</string>
    <string name="falha_tracao_frota_l">ATO;\nATO-RED;\nReset na chave REVERSORA e repetir os testes anteriores;\nMANUAL;\nMANUAL com todas as derivações mantidas simultaneamente: DERIVAÇÃO DE PORTAS e DERIVAÇÃO DE FREIO DE EMERGÊNCIA;\nRearme CEG;\nComando Oposto: MANUAL-RÉ com todas as DERIVAÇÕES;\nPreparar para reboque: aplicar emergência pela alavanca de comando. Caso alguma V6 esteja isolada no trem, normalizá-la.</string>
    <string name="falha_freio_emergencia_frota_e">Recarregar a tubulação;\n\nNão sendo possível identificar o motivo, realizar teste de propulsão com o botão de carregamento pressionado;\n\nReboque.</string>
    <string name="falha_freio_emergencia_frota_g" tools:ignore="Typos">Verificar o motivo na DDU e normalizar: Dispositivo de Emergência de Portas, botão soco do console, alavanca de comando e botão de rebocamento;\nDerivar o freio de emergência.</string>
    <string name="falha_freio_emergencia_frota_h">Verificar o motivo na DDU e normalizar: Dispositivo de Emergência de Portas, botão soco do console, alavanca de comando, descarrilho e botão de rebocamento;\nDerivar freio de emergência.</string>
    <string name="falha_freio_emergencia_frota_i">Verificar o motivo na DDU e normalizar: Dispositivo de Emergência de Portas, botão soco do console, descarrilamento/obstáculo, alavanca de comando e botão de rebocamento;\nTestar modalidades.</string>
    <string name="falha_freio_emergencia_frota_j">Verificar o motivo na DDU e normalizar: Dispositivo de Emergência de Portas, botão soco do console, descarrilamento/obstáculo, alavanca de comando e botão de rebocamento;\nIsolar DSF TOTAL;\nDerivar o freio de emergência( auto reboque).</string>
    <string name="falha_freio_emergencia_frota_k">Verificar o motivo na DDU e normalizar: Dispositivo de Emergência de Portas, botão soco do console, descarrilamento/obstáculo, alavanca de comando e botão de rebocamento;\nTestar modalidades, verificando alívio do freio de emergência.</string>
    <string name="falha_freio_emergencia_frota_l">Verificar o motivo na DDU e normalizar: Dispositivo de Emergência de Portas, botão soco do console, descarrilamento/obstáculo, alavanca de comando e botão de rebocamento;\nDerivar freio de emergência.</string>
    <string name="falha_vazamento_frota_e">Entre carros (Mangueiras):\n\nIsolar a chave de Isolação Encanamento Principal/ Emergência na posição CABECEIRA.\n\nNota: Em estações com PSD, isolar Eletrovalvula 1/2 nas cabeceiras adjacentes.\n\nSob a caixa:\n\nIsolar o vazamento em GERAL SUPRIMENTO;\nIsolar V6;\nDesligar o compressor\nIsolar Geral de portas;\n(Em estações com PSD, isolar pelo painel local de portas)\n\nSeguir mantendo pressionado o botão de carregamento.\n\nNOTA: Em região de CBTC, o trem com um freio isolado pode ser conduzido em CBTC/AM ou CBTC/MCS; com dois ou mais freios isolados, a condução deve ser realizada em CBTC/RM\n\nNOTA: Caso a V6 isolada seja de um carro extremo, é necessário colocar um empregado habilitado, portando transceptor, junto à valvula 6, para normalizá-la em caso de rompimento acidental do engate semipermanente.\n\nNOTA: No caso dos carros 2 e 5, deve ser isolada a V6 e portas do carro A adjacente, e evacuar o trem. Posicionar empregado no carro extremo para normalizar V6 em caso de desacoplamento indevido.\n\nNOTA: Caso aplique freio de estacionamento no carro problema, no trajeto, verificar a necessidade de parar o trem para a isolação do freio de estacionamento pelas alavancas de alívio nos 2 truques( portas 1 e 5).</string>
    <string name="alterar_data">Alterar a data</string>
    <string name="_4x2x4">4x2x4</string>
    <string name="manha">Manhã</string>
    <string name="tarde">Tarde</string>
    <string name="noite">Noite</string>
    <string name="folga">Folga</string>
    <string name="_4x1x4x3">4x1x4x3</string>
    <string name="_6x1x2x3">6x1x2x3</string>
    <string name="vespertino">Vespertino</string>
    <string name="day_plus">mais um dia</string>
    <string name="day_minus">menos um dia</string>
</resources>