<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/inicio">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_black_24"
            android:title="@string/home" />
    </group>
    <group android:id="@+id/main">
        <item
            android:id="@+id/escalas"
            android:icon="@drawable/baseline_date_range_black_24"
            android:title="@string/app_name_escalas" />
        <item
            android:id="@+id/frotas"
            android:icon="@drawable/baseline_subway_black_24"
            android:title="@string/app_name_frotas" />
        <item
            android:id="@+id/guia_falhas"
            android:icon="@drawable/baseline_bug_report_black_24"
            android:title="@string/app_name_falhas" />
        <item
            android:id="@+id/telefones"
            android:icon="@drawable/baseline_phone_black_24"
            android:title="@string/app_name_fones" />
    </group>
    <group android:id="@+id/other">
        <item
            android:id="@+id/links"
            android:icon="@drawable/baseline_link_black_24"
            android:title="@string/links" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/baseline_info_black_24"
            android:title="@string/about" />
    </group>

</menu>