<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/menos_um_dia"
            style="@style/dataStyle"
            android:contentDescription="@string/day_minus"
            app:srcCompat="@drawable/baseline_chevron_left_48" />

        <TextView
            android:id="@+id/dataPicker"
            style="@style/ListTitleStyle.Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            tools:text="data" />

        <ImageView
            android:id="@+id/mais_um_dia"
            style="@style/dataStyle"
            android:contentDescription="@string/day_plus"
            app:srcCompat="@drawable/baseline_chevron_right_48" />
    </LinearLayout>

    <Button
        android:id="@+id/textPicker"
        style="@style/ListTitleStyle.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:text="@string/alterar_data"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/ListTitleStyle.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:text="@string/_4x2x4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manha" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tarde" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/noite" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/folga" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/manha4x2x4"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:typeface="monospace"
                    tools:text="1" />

                <TextView
                    android:id="@+id/tarde4x2x4"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="2" />

                <TextView
                    android:id="@+id/noite4x2x4"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="3" />

                <TextView
                    android:id="@+id/folga4x2x4"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="4" />
            </LinearLayout>

            <TextView
                style="@style/ListTitleStyle.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4x1x4x3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manha" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tarde" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/folga" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/manha4x1"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1" />

                <TextView
                    android:id="@+id/tarde4x1"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="2" />

                <TextView
                    android:id="@+id/folga4x1"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="3" />
            </LinearLayout>

            <TextView
                style="@style/ListTitleStyle.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6x1x2x3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manha" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tarde" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vespertino" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/manha6x1x2x3"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1" />

                <TextView
                    android:id="@+id/tarde6x1x2x3"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="2" />

                <TextView
                    android:id="@+id/vespertino6x1x2x3"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/noite" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/folga" />

                <TextView
                    style="@style/ListTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/folga" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/noite6x1x2x3"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1" />

                <TextView
                    android:id="@+id/folga6x1x2x3"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="2" />

                <TextView
                    android:id="@+id/folga6x1x2x3_2"
                    style="@style/ListItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>