<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:baselineAligned="false"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_escalas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name_escalas"
                app:srcCompat="@drawable/baseline_date_range_24" />

            <TextView
                android:id="@+id/text_escalas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="32dp"
                android:text="@string/app_name_escalas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <ImageView
                android:id="@+id/image_frotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name_frotas"
                android:paddingTop="32dp"
                app:srcCompat="@drawable/baseline_subway_24" />

            <TextView
                android:id="@+id/text_frotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name_frotas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:elevation="4dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_falhas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name_falhas"
                app:srcCompat="@drawable/baseline_bug_report_24" />

            <TextView
                android:id="@+id/text_falhas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="32dp"
                android:text="@string/app_name_falhas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <ImageView
                android:id="@+id/image_fones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name_fones"
                android:paddingTop="32dp"
                app:srcCompat="@drawable/baseline_phone_24" />

            <TextView
                android:id="@+id/text_fones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name_fones"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        style="@style/NavigationViewStyle"
        app:itemIconTint="@color/drawer_menu_item"
        app:itemTextColor="@color/drawer_menu_item"
        app:menu="@menu/drawer_menu" >

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>